# calculator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msvc.yml
src/: BinaryNode.cpp  BinaryNode.h  CMakeLists.txt  Exception.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Node.h  NullaryNode.cpp  NullaryNode.h  Parser.cpp  Parser.h  ReturnValue.h  Token.cpp  Token.h  UnaryNode.cpp  UnaryNode.h  UnaryNodeFactory.cpp  UnaryNodeFactory.h  Value.h  main.cpp
test/: BinaryNodeTests.cpp  CMakeLists.txt  InterpreterTests.cpp  LexerTests.cpp  NodeTests.cpp  NullaryNodeTests.cpp  ParserTests.cpp  ReturnValueTests.cpp  TokenTests.cpp  UnaryNodeFactoryTests.cpp  UnaryNodeTests.cpp  ValueTests.cpp  mainTests.cpp
